Fixed card layout issue. Need to fill in content

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,3 @@ h1, h3 {
 h1, h2, h3, footer {
     font-family: monospace, sans-serif;
 }
-
-.card {
-    padding: 0;
-}
